# weather-edge

./: .env.example  .gitignore  .semgrepignore  AGENTS.md  CONTEXT.md  README.md  details.html  google_weather_cache.json  index.html  pyproject.toml  strategy-lab.html  strategy_research.json  strategy_research.protected.json  trading_signal.json
trading/: .env.example  .gitignore  README.md  pyproject.toml
trading/docs/: research_yes_no_strategy.md  strategy.md  user_guide.md
trading/research/: kalshi_kxhightsfo_open_markets.json  kalshi_kxhightsfo_series.json  orderbook_KXHIGHTSFO-26JUN03-B66.5.json  orderbook_KXHIGHTSFO-26JUN03-B68.5.json  orderbook_KXHIGHTSFO-26JUN03-B70.5.json  orderbook_KXHIGHTSFO-26JUN03-B72.5.json  orderbook_KXHIGHTSFO-26JUN03-T66.json  orderbook_KXHIGHTSFO-26JUN03-T73.json
trading/sfo_kalshi_quant/: __init__.py  arbitrage.py  backtest.py  backtest_rescore.py  cli.py  colors.py  config.py  consensus.py  data_readiness.py  dataset_research.py  datasets.py  db.py  ensemble.py  execution.py  exits.py  fees.py  forecast.py  kalshi.py  models.py  paper.py  probability.py  report.py  risk.py  settlement.py  settlement_day.py  standard_bins.py  strategy_research.py  summary.py  synthetic_blend.py  tail_basket.py  theta_fit.py
trading/tests/: run_tests.py  support.py  test_arbitrage.py  test_audit_fixes.py  test_aws_deploy.py  test_backtest.py  test_backtest_rescore.py  test_bins_and_fees.py  test_clean_forecast_scoring.py  test_comfort_edge.py  test_consensus_guard.py  test_daily_report.py  test_dashboard_backtest.py  test_dashboard_consistency.py  (+31 more)
(+83 files in other folders)
