[project]
name = "sfo-kalshi-quant"
version = "0.1.0"
description = "Paper-trading and backtesting engine for Kalshi SFO high-temperature markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
auth = ["cryptography>=42.0"]
dev = ["pytest>=8.0"]

[project.scripts]
sfo-kalshi = "sfo_kalshi_quant.cli:main"

[tool.setuptools.packages.find]
include = ["sfo_kalshi_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
